force-app/main/default/objects/Search_Component_Configuration__mdt/fields/I_RS_Baseline_Fields__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Baseline_Fields__c</fullName>
    <description>Default fields to select in SOQL and SOSL queries</description>
    <label>Baseline Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>