force-app/main/default/objects/Search_Component_Configuration__mdt/fields/I_RS_Baseline_Filters__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Baseline_Filters__c</fullName>
    <description>Use as default filtering in SOQL and SOSL Queries</description>
    <label>Baseline Filters</label>
    <type>TextArea</type>
</CustomField>