force-app/main/default/objects/Search_Component_Configuration__mdt/fields/I_RS_Object__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object__c</fullName>
    <description>Object search is based on</description>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Search_Component_Configurations</relationshipLabel>
    <relationshipName>Search_Component_Configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>